# StoneCPP

./: .gitignore  LICENSE  README.md  StoneCPP.sln
StoneCPP/: CMakeLists.txt  ClassDiagram.cd  StoneCPP.vcxproj  StoneCPP.vcxproj.filters  example.h  main.cpp  stone_parser.h  token.h  while_state.input
StoneCPP/ast/: CMakeLists.txt  array_literal.h  array_postfix.h  ast.cpp  ast.h  ast_leaf.h  ast_list.h  ast_tree.h  binary_operation.h  block.h  call_expression.h  call_postfix.h  class_definition.h  expression.h  function_definition.h  identifier_literal.h  if_statement.h  include_all_ast.h  literal.h  member_postfix.h  name.h  number_literal.h  operators.h  postfix.h  primary_expression.h  simple_statement.h  statement.h  string_literal.h  to_string_visitor.cpp  to_string_visitor.h  unary_operation.h  visitor.h  while_statement.h
StoneCPP/bak/: parser.yy  scanner.h  scanner.ll
StoneCPP/deprected/: old_lexer.txt
StoneCPPTest/: ParserTest.cpp  StoneCPPTest.vcxproj
StoneCPPTest_bak/: ParserTest.cpp  StoneCPPTest.vcxproj  stdafx.cpp
